--- a/Documents/Base.lproj/Main.storyboard
+++ b/Documents/Base.lproj/Main.storyboard
@@ -114,7 +114,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="GPS-3N-KhZ" firstAttribute="leading" secondItem="TZK-SD-ieE" secondAttribute="trailing" constant="10" id="2YL-Cw-n0X"/>
                             <constraint firstItem="Ha4-sr-kSc" firstAttribute="trailing" secondItem="GPS-3N-KhZ" secondAttribute="trailing" constant="15" id="5Kt-Oa-YaZ"/>
